frontend/3.frontend.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: vote
spec:
 rules:
 - host: <hostanme>
   http:
     paths:
     - path: /
       backend:
         serviceName: frontend
         servicePort: 80
